force-app/main/default/objects/BrokerSettings__c/BrokerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is a config custom setting for Broker Domain</description>
    <label>BrokerSettings</label>
</CustomObject>