force-app/main/default/objects/BrokerSettings__c/fields/BypassApplicationEvent__c.field-meta.xml
<CustomField>
    <fullName>BypassApplicationEvent__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Control the application publish event using this custom setting.</description>
    <label>BypassApplicationEvent</label>
    <type>Checkbox</type>
</CustomField>