force-app/main/default/objects/BrokerSettings__c/fields/BypassBrokerEvent__c.field-meta.xml
<CustomField>
    <fullName>BypassBrokerEvent__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Control the Broker contact publish event using this custom setting.</description>
    <label>BypassBrokerEvent</label>
    <type>Checkbox</type>
</CustomField>