force-app/main/default/objects/BrokerSettings__c/fields/BypassBrokerRelationEvent__c.field-meta.xml
<CustomField>
    <fullName>BypassBrokerRelationEvent__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Control the broker relation publish event using this custom setting.</description>
    <label>BypassBrokerRelationEvent</label>
    <type>Checkbox</type>
</CustomField>