force-app/main/default/objects/BrokerSettings__c/fields/BypassBrokerSyncEvents__c.field-meta.xml
<CustomField>
    <fullName>BypassBrokerSyncEvents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassBrokerSyncEvents</label>
    <type>Checkbox</type>
</CustomField>