force-app/main/default/objects/BrokerSettings__c/fields/BypassCaseEvent__c.field-meta.xml
<CustomField>
    <fullName>BypassCaseEvent__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Control the case publish event using this custom setting.</description>
    <label>BypassCaseEvent</label>
    <type>Checkbox</type>
</CustomField>