force-app/main/default/objects/BrokerSettings__c/fields/BypassCaseSyncEvents__c.field-meta.xml
<CustomField>
    <fullName>BypassCaseSyncEvents__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Control the case publish event using this custom setting.</description>
    <label>BypassCaseSyncEvents</label>
    <type>Checkbox</type>
</CustomField>