force-app/main/default/objects/BrokerSettings__c/fields/BypassContractEvent__c.field-meta.xml
<CustomField>
    <fullName>BypassContractEvent__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Control the Contract publish event using this custom setting.</description>
    <label>BypassContractEvent</label>
    <type>Checkbox</type>
</CustomField>