force-app/main/default/objects/BrokerSettings__c/fields/BypassCustomerSyncEvents__c.field-meta.xml
<CustomField>
    <fullName>BypassCustomerSyncEvents__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Control the Customer publish event using this custom setting.</description>
    <label>BypassCustomerSyncEvents</label>
    <type>Checkbox</type>
</CustomField>