force-app/main/default/objects/BrokerSettings__c/fields/BypassSettlementAccountEvent__c.field-meta.xml
<CustomField>
    <fullName>BypassSettlementAccountEvent__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Toggle Settlement account event dispatch</description>
    <label>BypassSettlementAccountEvent</label>
    <type>Checkbox</type>
</CustomField>